# Guise

./: .gitignore  Cargo.toml  README.md
examples/counter/: Cargo.toml  index.html
examples/counter/src/: main.rs
examples/viemo_todomvc/: Cargo.toml  index.html  todomvc.css
examples/viemo_todomvc/src/: main.rs  model.rs  todo_app.rs  todo_item.rs
guise/: Cargo.toml
guise/src/: attributes.rs  element_ref.rs  flatten_abridged.rs  id_sink.rs  lib.rs  listener.rs  patch_dom.rs  raw_sink.rs  sink_spawner.rs  vdom.rs  vdom_builder_ext.rs  vdom_ext.rs  view_model.rs
guise_macro/: Cargo.toml
guise_macro/src/: attributes.rs  lib.rs
