[package]
name = "guise"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arwa = { path = "../../rudo/arwa" }
bumpalo = { version = "3.9.1", features = ["collections"] }
futures = "0.3.21"
guise_macro = { version = "0.1.0", path = "../guise_macro" }
ouroboros = "0.15.0"
pin-project-lite = "0.2"
unicase = "2.6.0"
