[package]
name = "guise_macro"
version = "0.1.0"
authors = ["RSSchermer <roland0507@gmail.com>"]
edition = "2021"
repository = "https://github.com/RSSchermer/guise"
homepage = "https://github.com/RSSchermer/guise"
license = "MIT"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.5"
quote = "1.0.2"

[dependencies.syn]
version = "1.0.5"
features = [
    "full"
]
