[package]
name = "counter"
version = "0.1.0"
authors = ["Roland Schermer <roland0507@gmail.com>"]
edition = "2021"
license = "MIT"
publish = false

[dependencies]
arwa = { version = "0.1.0", path = "../../../rudo/arwa" }
futures = "0.3.21"
guise = { version = "0.1.0", path = "../../guise" }
wasm-bindgen = "0.2.81"
